--- a/AIR_SQL/nbproject/project.properties
+++ b/AIR_SQL/nbproject/project.properties
@@ -75,7 +75,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=AIR_SQL
-main.class=PostgreSQLJDBC
+main.class=Login
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
