--- a/AIR_SQL/nbproject/project.properties
+++ b/AIR_SQL/nbproject/project.properties
@@ -35,13 +35,15 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/AIR_SQL
 endorsed.classpath=
 excludes=
+file.reference.jcalendar-1.4.jar=C:\\Users\\prach\\Downloads\\jcalendar-1.4.jar
 file.reference.jdatepicker-1.3.4.jar=..\\jdatepicker-1.3.4.jar
-file.reference.postgresql-42.2.12.jar=C:\\Users\\patel\\Desktop\\CLG\\Sem - 4\\DBMS\\Air-sql\\postgresql-42.2.12.jar
+file.reference.postgresql-42.2.12.jar=C:\\Users\\prach\\Downloads\\postgresql-42.2.12.jar
 includes=**
 jar.compress=false
 javac.classpath=\
+    ${file.reference.jdatepicker-1.3.4.jar}:\
     ${file.reference.postgresql-42.2.12.jar}:\
-    ${file.reference.jdatepicker-1.3.4.jar}
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
