--- a/AIR_SQL/nbproject/project.properties
+++ b/AIR_SQL/nbproject/project.properties
@@ -36,14 +36,18 @@ dist.jlink.output=${dist.jlink.dir}/AIR_SQL
 endorsed.classpath=
 excludes=
 file.reference.jcalendar-1.4.jar=C:\\Users\\prach\\Downloads\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=..\\jcalendar-1.4.jar
 file.reference.jdatepicker-1.3.4.jar=..\\jdatepicker-1.3.4.jar
 file.reference.postgresql-42.2.12.jar=C:\\Users\\prach\\Downloads\\postgresql-42.2.12.jar
+file.reference.postgresql-42.2.12.jar-1=..\\postgresql-42.2.12.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.jdatepicker-1.3.4.jar}:\
     ${file.reference.postgresql-42.2.12.jar}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.postgresql-42.2.12.jar-1}:\
+    ${file.reference.jcalendar-1.4.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
